--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -80,7 +80,7 @@
       text-align: center;
       text-decoration: none;
       color: $muted-text-color;
-      border: 1px solid mix(#000, $border-color, 25%);
+      border: 1px solid mix(rgb(255, 0, 0), $border-color, 25%);
       border-radius: 0;
 
       &:hover {
@@ -142,7 +142,7 @@
 
     .prev_next {
       font-family: $cute;
-      color:#6eee79;
+      color:#ffac74;
     }
 
     &:hover {
@@ -471,7 +471,7 @@
     color: inherit;
     font-size: $type-size-3;
     font-family: $cute;
-    color: mix(#fff,$primary-color,30%);
+    color: mix(#fff,$primary-color,70%);
 
     &:hover {
       text-decoration: underline;
@@ -527,7 +527,7 @@
   padding: 0.25rem 0;
   font-size: $type-size-3;
   font-family: $serif;
-  color: mix(#fff,$primary-color,20%);
+  color: mix(#fff,$primary-color,30%);
   border-bottom: 1px solid $border-color;
 }
 
