--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -80,7 +80,7 @@
       text-align: center;
       text-decoration: none;
       color: $muted-text-color;
-      border: 1px solid mix(rgb(255, 0, 0), $border-color, 25%);
+      border: 1px solid mix(#000, $border-color, 25%);
       border-radius: 0;
 
       &:hover {
